[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/onlyObjects_retina_rotated.png" type="Texture" id=1]
[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=2]
[ext_resource path="res://tanks/EnemyTank.gd" type="Script" id=3]
[ext_resource path="res://bullets/EnemyBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/UnitDisplay.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.0244, 38.6692 )

[node name="EnemyTank" groups=[
"enemytank",
] instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )
Bullet = ExtResource( 4 )
max_speed = 300
rotation_speed = 100.0
gun_cooldown = 0.5
max_health = 30
turret_speed = 5.0
detect_radius = 200

[node name="Body" parent="." index="0"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 268.304, 184, 78.4125, 78.022 )

[node name="Turret" parent="." index="2"]
texture = ExtResource( 1 )
offset = Vector2( 25, 0 )
region_enabled = true
region_rect = Rect2( 371, 13, 60, 26 )

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2( 90, 0 )

[node name="Flash" parent="Turret" index="1"]
modulate = Color( 1, 1, 1, 1 )
position = Vector2( 55, 0 )
texture = ExtResource( 1 )
offset = Vector2( 28, 0 )
region_rect = Rect2( 584.222, 57.8883, 55.5731, 32.3231 )

[node name="CollisionShape2D" parent="." index="3"]
visible = false
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="LookAhead" type="RayCast2D" parent="." index="5"]
visible = false
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 2

[node name="LookAhead2" type="RayCast2D" parent="." index="6"]
visible = false
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 2

[node name="UnitDisplay" parent="." index="7" instance=ExtResource( 5 )]

[node name="Explosion" parent="." index="10"]
scale = Vector2( 1.5, 1.5 )
speed_scale = 2.0
[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
